# vscc

./: CMakeLists.txt  README.md
examples/basic_ir/: main.c
examples/codecheck/: main.c
examples/mm_test/: main.c
examples/strlen_jit/: main.c
include/: vscc.h
include/asm/: assembler.h  codegen.h  symbol.h
include/asm/codegen/: x64.h
include/ir/: fmt.h  intermediate.h
include/opt/: opt.h
include/util/: list.h
src/asm/: assembler.c  codegen.c  codegen_x64.c  symbol.c
src/asm/codegen/: x64.c
src/ir/: fmt.c  intermediate.c
src/opt/: opt.c
src/util/: list.c
